--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,17 @@ body {
     line-height: 26px;
     color: black;
     font-weight: bold;
-    font-family: "PTSans";   
+    font-family: "PTSans Bold", "Arial", sans-serif;   
 }
 h2 .info-tourist-title {
     font-size: 21px;
     line-height: 21px;
-    color: black;
-    font-weight: bold;
-    font-family:"PTSans";   
+    font-weight: bold;  
 }
 div .result-sort-title {
     font-size: 12px;
     line-height: 18px;
     color: #81b3d2;
     font-weight: normal;
-    font-family: "PTSans";
+    font-family: "PTSans Regular", "Arial", sans-serif;;
 }
