--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 
 *,
 *::before,
@@ -10,25 +9,20 @@ html {
 }
 .clearfix::after {
   content: "";
-
   display: table;
   clear: both;
 }
-=======
->>>>>>> origin/master
+
 body {
     font-size: 14px;
     line-height: 26px;
     color: black;
     font-weight: bold;
-<<<<<<< HEAD
     font-family: "PTSans", "Arial", sans-serif;
     padding: 0 40px;
     text-align: center;
     text-transform: uppercase;
-=======
-    font-family: "PTSans", "Arial", sans-serif;   
->>>>>>> origin/master
+    font-family: "PTSans", "Arial", sans-serif;
 }
 h2 .info-tourist-title {
     font-size: 21px;
@@ -42,7 +36,7 @@ div .result-sort-title {
     font-weight: normal;
     font-family: "PTSans", "Arial", sans-serif;
 }
-<<<<<<< HEAD
+
 
 .container {
     width: 1200px;
@@ -57,16 +51,12 @@ div .result-sort-title {
     background-color: red;
     
 }
-.main-navigation {
-    width: 1200px;
-    min-height: 57px;
-    padding-top: 22.5px;
-    
-}
+
 .main-navigation li {
     display: inline-block;
     width: 20%;
     min-height: 57px;
+     background-color: red;
 }
 a .main-left {
     text-align: left;
@@ -82,42 +72,14 @@ a .main-right {
 .main-picture {
     width: 1200px;
     min-height: 571px;
-=======
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
 }
-html {
-    box-sizing: border-box;
-}
-.container {
-    width: 1280px;
-    padding: 0 40px;
-    margin: 0 auto;
-    background-color: blue;
-}
-.main-navigation {
-    min-height: 57px;
-    width: 1200px;
-    padding: 0 73px;
-    background-color: red;
-    
-}
-.main-picture {
-    width: 1200px;
-    height: 510px;
-    margin-bottom: 63,5px;
->>>>>>> origin/master
-    background-color: yellow;
-}
+
 .info {
     width: 1200px;
-<<<<<<< HEAD
+
     min-height: 217px;
     background-color: white;
     }
-
 
 .features-one, .features-two {
     float:left;
@@ -146,28 +108,18 @@ html {
     
     
 }
-
-.features-three {
+.features {
+    width: 1200px;
+    min-height: 257px;
+    
+    
+}
+.features-three, .features-four, .features-five {
     float:left;
     width: 400px;
     min-height: 257px;
     background-color: darkgrey;
     
-    
-}
-.features-four {
-    float:left;
-    width: 400px;
-    min-height: 257px;
-    background-color: darkgrey;
-    
-    
-}
-.features-five {
-    float:right;
-    width: 400px;
-    min-height: 257px;
-    background-color: darkgrey;
     
 }
 
@@ -297,38 +249,7 @@ height: 398px;
     text-align: right;
 }
 
-=======
-    height: 218px;
-    background-color: deepskyblue;
-    padding-top: 65px;
-    padding-left: 282px;
-    padding-right: 282px;
-    margin-bottom: 51px;
-    }
 
-
-    
-}
-.features-one {
-    float:left;
-    width: 308;
-    height: 256;
-    background-color: gold;
-  
-    padding: 50px 46px 40px 46px;
-}
-
-.pictures1 {
-    float:right;
-    width: 800;
-    height: 256;
-    background-color: goldenrod;
-    margin-right: 0;
-    margin-left: 0;
-    
-}
-.features1 {
-    margin-bottom: 60px;}
 
 .info-tourist {
     padding-left: 73px;
@@ -352,60 +273,4 @@ height: 398px;
     float:right;
     width: 300px;
 }
-.pictures2 {
-    float:left;
-    width: 800px;
-    height: 256px;
-    background-color: goldenrod;
-    margin-right: 0;
-    margin-left: 0;
-}
-.features-two {
-    float: right;
-    padding-left: 48px;
-    padding-right: 48px;
-    padding-top: 49px;
-    padding-bottom: 41px;
-    background-color: azure;
-    
-}
-.features-three {
-    float:left;
-    width: 290px;
-    padding-left: 73px;
-    margin-right: 88px;
-    background-color: fuchsia;
-    
-    
-}
-.features-four {
-    padding-left: 55px;
-    margin-right: 55px;
-    float:left;
-    width: 290px;
-    background-color: darkgreen;
-    
-}
-.features-five {
-    float:right;
-    width: 270px;
-    margin-right: 55px;
-    background-color: firebrick;
-    
-}
-.features {
-    margin-bottom: 51px;
-    background-color: brown;}
 
-}
-.interest {
-    background-color: indigo;
-}
-
-.clearfix::after {
-  content: "";
-
-  display: table;
-  clear: both;
-}
->>>>>>> origin/master
