--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,8 @@ a .main-right {
     padding: 50px 46px 40px 46px;
 }
 
-.pictures1, .pictures2 {
-    float: right;
+.pictures {
+    float: left;
     width: 800px;
     min-height: 256px;
     background-color: goldenrod;
@@ -122,7 +122,7 @@ a .main-right {
     
     
 }
-.features-three, .features-four, .features-five {
+.features-item {
     float:left;
     width: 400px;
     min-height: 257px;
@@ -153,13 +153,14 @@ height: 398px;
     right: 58px;
     bottom: 57px;
     left: 54.5px;
+    background-color: white;
 }
 .main-footer {
     width: 1200px;
     min-height: 126px;
      background-color: white;
 }
-.footer-insta, .footer-social, .footer-copyright {
+.footer-name {
     float: left;
     width: 400px;
     min-height: 120px;
@@ -259,26 +260,4 @@ height: 398px;
 
 
 
-.info-tourist {
-    padding-left: 73px;
-    padding-right: 50px;
-    padding-top: 60px;
-    padding-bottom: 84,5px;
-}
-.info-tourist-home {
-    float:left;
-    width: 300px;
-    margin-right: 59px;
-    
-}
-.info-tourist-food {
-    float:left;
-    width: 300px;
-    margin-right: 59px;
-    
-}
-.info-tourist-souvenirs {
-    float:right;
-    width: 300px;
-}
 
